more hot fixes: flex wrap and image size fb browser

--- a/2019/2019.css
+++ b/2019/2019.css
@@ -241,7 +241,7 @@ and (max-width : 720px)
     .img-meme {
         position: relative;
         width: 100%;
-        height: 80vh;
+        height: 500px;;
         margin-top: 40px;
     }
 
@@ -257,6 +257,10 @@ and (max-width : 720px)
         padding: 0;
         margin-top: 0;
         margin-bottom: 0;
+    }
+
+    .footer-text {
+        flex-wrap: wrap;
     }
 
 
